--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<button id="toggle-theme" onclick="toggleMode()">Toggle Theme</button>
 		</div>
 		<div class="display">
-			<input type="text" id="display" disabled>
+			<input type="text" id="input" disabled>
 			<span id="output"></span>
 		</div>
 		<div class="Keypad">
